<resources>
    <string name="app_name">playAndroid</string>
    <string name="title">玩Android</string>
    <string name="home">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="item">项目</string>
    <string name="kind">类别:</string>
    <string name="time">时间:</string>
    <string name="author">作者:</string>
    <string name="loading">正在加载…</string>
    <string name="search_hint">支持多个关键词，用空格隔开</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="not_history">暂无历史记录</string>
    <string name="clear_histories">清除历史记录</string>

</resources>
