<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/top_layout"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/setting"
            android:layout_weight="1"
            android:src="@drawable/ic_dehaze_black_24dp"
            android:background="@color/green"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/title"
            android:textSize="24sp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/search"
            android:src="@drawable/ic_search_black_24dp"
            android:background="@color/green"/>






    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/fragment"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/bottom_layout"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/home_button"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:text="@string/home"
            android:background="@color/white"/>



        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/knowledge_button"
            android:text="@string/knowledge_system"
            android:drawableTop="@drawable/ic_usb_black_24dp"
            android:background="@color/white"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/item"
            android:drawableTop="@drawable/ic_folder_black_24dp"
            android:background="@color/white"/>






    </LinearLayout>

</LinearLayout>